# New-folder

./: 007.py  Acts.py  Areas.py  ElectricalFormulas.py  FaI.py  Lab02.py  Meals.py  Numbers.py  aboutme.html  adventure.py  compare.py  fall.py  for_loops.py  guess.py  index.html  lists.py  messaging.py  music.py  shopping_list.py  testcode1.py  themepark.py  word_game.py
consolenation/: donkey-kong.html  index.html  nes.html  site-plan.html  snes.html
consolenation/styles/: site-plan.css  style.css
cse110/: MadLibs.py  Meals.py  Waffle_House.py  Waffle_House.spec  adventure.spec  books_and_chapters.py  file.py  grades.py  loops.py  palindrome.py  python.py  shopping_cart.py  spanish_flu.py  temp.py  wind_chill.py
cse130/: Lab02.py  binary_search.py  bubble_sort.py  image_decompress.py  is_prime.py  leap_year.py  monopoly.py  power.py  pseudocode.txt
cse130/json_files/: binary_search.json  empty.json  languages.json  large.json  medium_languages.json  one_element.json  short_languages.json  small.json
cse199/: index.html  notes.css  notes.html  notes.js
in-class/: Education.html  cherries.html  designer.html  learn-css.html
in-class/styles/: Education.css  cherries.css  designer.css  styles.css
qrgen/: README.md  pyproject.toml
qrgen/qrgen/: __init__.py  generator.py
qrgen/tests/: test_generator.py
wdd131/: debug.html  dom-events.js  media-query.css  media-query.html
wdd131/Week 6/: arrays.js  gpa.html  gpa.js
wdd131/dom-basics/: dom-basics.html  dom-basics.js
wwr/: contact-us.html  faq.html  index.html  site-plan-rafting.html
(+7 files in other folders)
